[gd_scene load_steps=14 format=3 uid="uid://bkjs3rlgxr51y"]

[ext_resource type="Texture2D" uid="uid://dgnlgq7e5jvd2" path="res://art/door/door.png" id="1_hpvv5"]
[ext_resource type="Script" uid="uid://enup357vgvui" path="res://scripts/door.gd" id="1_uvdjg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uvdjg"]
atlas = ExtResource("1_hpvv5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83dcw"]
atlas = ExtResource("1_hpvv5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la1wf"]
atlas = ExtResource("1_hpvv5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18pbm"]
atlas = ExtResource("1_hpvv5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5w8r"]
atlas = ExtResource("1_hpvv5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t58dd"]
atlas = ExtResource("1_hpvv5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ju5n0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvdjg")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83dcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18pbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5w8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t58dd")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgbum"]
size = Vector2(32, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pg2b6"]
size = Vector2(32, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ey00f"]
size = Vector2(5, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ayau"]
size = Vector2(6, 31)

[node name="Door" type="Node2D"]
script = ExtResource("1_uvdjg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ju5n0")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]

[node name="OpenCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_kgbum")

[node name="ClosedStaticBody2D" type="StaticBody2D" parent="."]

[node name="ClosedCollisionShape2D" type="CollisionShape2D" parent="ClosedStaticBody2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_pg2b6")
debug_color = Color(0.9987908, 0, 0.14475623, 0.41960785)

[node name="OpenedStaticBody2D" type="StaticBody2D" parent="."]

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="OpenedStaticBody2D"]
position = Vector2(-13.5, 0.5)
shape = SubResource("RectangleShape2D_ey00f")
debug_color = Color(0, 0.63546735, 0.42063263, 0.41960785)

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="OpenedStaticBody2D"]
position = Vector2(13, 0.5)
shape = SubResource("RectangleShape2D_4ayau")
debug_color = Color(0.52865255, 0.5716434, 0.033889055, 0.41960785)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
